# auto-attendance-records

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
apps/: simple_app.py  web_app.py
src/: __init__.py  attendance_processor.py  cli_app.py
tests/: run_all_tests.py  test_attendance_processor.py  test_cli_app.py  test_filename_generation.py  test_simple_app.py
